# py-envencrypt-core

./: .gitignore  Cargo.toml  HYBRID_PACKAGING.md  README.md  build_all.ps1  build_dev.ps1  build_hybrid.ps1  pyproject.no-win32.toml  pyproject.toml  test_hybrid.py  test_modules.py
.github/workflows/: CI.yml  release.yml  release_old.yml
crates/dpapi/: Cargo.toml  README.md  build.py  pyproject.toml
crates/dpapi/python/dpapi/: __init__.py
crates/dpapi/python/envencrypt_core/dpapi/: __init__.py  dpapi.pyi
crates/dpapi/src/: lib.rs
crates/keyring/: Cargo.toml  README.md  pyproject.toml
crates/keyring/python/envencrypt_core/: __init__.py
crates/keyring/src/: lib.rs
src/: lib.rs
src/envencrypt_core/: __init__.py  _core.pyi
src/python/envencrypt_core/: __init__.py
src/python/envencrypt_core/dpapi/: __init__.py
src/rust/: lib.rs
src/rust/dpapi/: mod.rs
src/rust/keyring/: mod.rs
