[project]
name = "envencrypt-core"
version = "0.1.2"
description = "Core encryption utilities for python envencrypt"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE*"]
authors = [
    { name = "Dyve", email = "dev@dyve.ch" },
    { name = "Igor Petrovic", email = "758832+igorovic@users.noreply.github.com" }
]
requires-python = ">=3.11"

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["dist/", "target/"]

# [project.scripts]
# envencrypt-core = "envencrypt_core:main"

[tool.uv]
# cache-dir = "../../.uv_cache"
cache-keys = [
    { file = "pyproject.toml" }, 
    { file = "src/**/*.rs" }, 
    { file = "Cargo.toml" }, 
    { file = "Cargo.lock" }
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "envencrypt_core.core"
python-packages = ["envencrypt_core"]
python-source = "src/python"


[dependency-groups]
dev = [
    "maturin>=1.9.6",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/envencrypt-core/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/envencrypt/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = false