[package]
name = "envencrypt_core_dpapi"
version = "0.1.0"
edition = "2021"
description = "DPAPI module for Windows Data Protection API"
license = "GPL-3.0-or-later"
authors = ["Igor Petrovic <758832+igorovic@users.noreply.github.com>"]
repository = "https://github.com/igorovic/envencrypt-core"
documentation = "https://github.com/igorovic/envencrypt-core"
homepage = "https://github.com/igorovic/envencrypt-core"

[lib]
name = "dpapi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
windows = { workspace = true }