[project]
name = "envencrypt_core_dpapi"
version = "0.1.2"
description = "DPAPI module for Windows Data Protection API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Igor Petrovic", email = "758832+igorovic@users.noreply.github.com" }
]


[tool.maturin]
profile = "release"
bindings = "pyo3"
module-name = "envencrypt_core.dpapi.dpapi"
python-packages = ["envencrypt_core"]
python-source = "python"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
