[package]
name = "envencrypt_core_keyring"
version = "0.1.0"
edition = "2021"
description = "Keyring module for password management"
license = "GPL-3.0-or-later"
authors = ["Igor Petrovic <758832+igorovic@users.noreply.github.com>"]
repository = "https://github.com/igorovic/envencrypt-core"
documentation = "https://github.com/igorovic/envencrypt-core"
homepage = "https://github.com/igorovic/envencrypt-core"

[lib]
name = "keyring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
windows = { workspace = true }