[project]
name = "envencrypt-core-keyring"
version = "0.1.0"
description = "Keyring module for password management"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Igor Petrovic", email = "758832+igorovic@users.noreply.github.com" }
]

[tool.maturin]
module-name = "envencrypt_core.keyring"
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"